Razor: new HtmlHelper extension RenderWidget()

--- a/src/Presentation/SmartStore.Web/Views/Blog/BlogPost.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Blog/BlogPost.cshtml
@@ -29,8 +29,7 @@
     </h1>
 
     <div class="blogpost-body">
-
-        @Html.Widget("blogpost_page_before_body")
+		@{ Html.RenderWidget("blogpost_page_before_body"); }
         <div class="blogpost-content">
             @Html.Raw(Model.Body)
         </div>
@@ -48,7 +47,7 @@
             </div>
         }
 
-        @Html.Widget("blogpost_page_before_comments")
+		@{ Html.RenderWidget("blogpost_page_before_comments"); }
         @if (Model.AllowComments)
         {
             <div id="new-comment" class="new-comment card">
@@ -124,13 +123,14 @@
                                 </div>
                             </div>
 
-                            @Html.Widget("blogpost_page_inside_comment")
+							@{ Html.RenderWidget("blogpost_page_inside_comment"); }
                         </div>
                     }
                     </div>
                 </div>
             }
         }
-        @Html.Widget("blogpost_page_after_comments")
+
+		@{ Html.RenderWidget("blogpost_page_after_comments"); }
     </div>
 </article>
