--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.AlsoPurchased.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.AlsoPurchased.cshtml
@@ -9,9 +9,9 @@
 	}
 }
    
-<div class="also-purchased block block-boxed">
+<div class="pd-also-purchased block block-boxed m-b-1">
     <div class="block-title">
-        @T("Products.AlsoPurchased")
+        <h3>@T("Products.AlsoPurchased")</h3>
     </div>
     <div class="block-body">
 		<div class="artlist-carousel">
