--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Price.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Price.cshtml
@@ -87,6 +87,9 @@
 			}
 		</div>
 
+		<!-- Tier prices -->
+		Html.RenderAction("ProductTierPrices", new { productId = Model.Id });
+
 		<!-- Pangv & legal info -->
 		if (Model.IsBasePriceEnabled || Model.ShowLegalInfo)
 		{
