--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -303,7 +303,7 @@
 	{
 		<div class="block block-bordered newsletter-subscription">
 			<div class="block-title">
-				@T("Common.Options")
+				<h3>@T("Common.Options")</h3>
 			</div>
 			<div class="block-body">
 				@if (Model.NewsLetterSubscription != CheckoutNewsLetterSubscription.None)
