--- a/src/Presentation/SmartStore.Web/Views/Topic/TopicBlock.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Topic/TopicBlock.cshtml
@@ -70,7 +70,7 @@ else {
         @if (!string.IsNullOrEmpty(Model.Title))
         {
             <div class="block-title" id="ph-title-@Model.Id">
-                @Model.Title
+				<h3>@Model.Title</h3>
             </div>
         }
         <div class="block-body topic-html-content-body text-body">
