--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.RelatedProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.RelatedProducts.cshtml
@@ -9,9 +9,9 @@
 	}
 }
 
-<div class="related-products block block-boxed">
+<div class="pd-related-products block block-boxed m-b-1">
     <div class="block-title">
-        @T("Products.RelatedProducts")
+        <h3>@T("Products.RelatedProducts")</h3>
     </div>
     <div class="block-body">
 		<div class="artlist-carousel">
