--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/_CheckoutAttributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/_CheckoutAttributes.cshtml
@@ -17,15 +17,19 @@
                         {
                             case AttributeControlType.DropdownList:
                                 {
-                            <select name="@(controlId)" id="@(controlId)" style="width:100%">
-                                @if (!attribute.IsRequired)
-                                {
-                                    <option value="0">---</option>
-                                }
+                            <select name="@(controlId)" id="@(controlId)">
+								@if (!attribute.IsRequired)
+								{
+									<option>@T("Common.Unspecified")</option>
+								}
+								else if (attribute.Values.Count > 0 && !attribute.Values.Any(x => x.IsPreSelected))
+								{
+									<option>@T("Common.PleaseSelect")</option>
+								}
                                 @foreach (var caValue in attribute.Values)
                                 {
                                     <option selected="@caValue.IsPreSelected" value="@caValue.Id">@caValue.Name
-                                        @(!String.IsNullOrEmpty(caValue.PriceAdjustment) ? " [" + caValue.PriceAdjustment + "]" : null)
+                                        @(!String.IsNullOrEmpty(caValue.PriceAdjustment) ? " (" + caValue.PriceAdjustment + ")" : null)
                                     </option>
                                 }
                             </select>
@@ -55,12 +59,12 @@
                                 break;
                             case AttributeControlType.TextBox:
                                 {
-                            <input name="@(controlId)" type="text" class="textbox input-block-level" id="@(controlId)" value="@attribute.DefaultValue" />
+                            <input name="@(controlId)" type="text" class="form-control" id="@(controlId)" value="@attribute.TextValue" />
                                 }
                                 break;
                             case AttributeControlType.MultilineTextbox:
                                 {
-                            <textarea id="@(controlId)" class="input-block-level" name="@(controlId)">@attribute.DefaultValue</textarea>
+                            <textarea id="@(controlId)" class="form-control" name="@(controlId)">@attribute.TextValue</textarea>
                                 }
                                 break;
                             case AttributeControlType.Datepicker:
